Stylelint, eslint and prettier were added+scripts

--- a/src/app/styles/fonts.scss
+++ b/src/app/styles/fonts.scss
@@ -1,14 +1,14 @@
 @font-face {
-    font-family: "Montserrat-Bold";
+    font-family: Montserrat-Bold;
     src: url("../../shared/assets//fonts/Montserrat-Bold.woff2") format("woff2");
-  }
+}
   
 @font-face {
-    font-family: "Montserrat-Regular";
+    font-family: Montserrat-Regular;
     src: url("../../shared/assets//fonts/Montserrat-Regular.woff2") format("woff2");
 }
 
 @font-face {
-    font-family: "Montserrat-Semibold";
+    font-family: Montserrat-Semibold;
     src: url("../../shared/assets//fonts/Montserrat-SemiBold.woff2") format("woff2");
 }
