--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,6 @@
 @import './fonts.scss';
 
 .title {
-  color: red;
-  font-family: "Montserrat-Bold";
+    color: red;
+    font-family: Montserrat-Bold, sans-serif;
 }
