--- a/src/app/layoutes/MainLayout/MainLayout.module.scss
+++ b/src/app/layoutes/MainLayout/MainLayout.module.scss
@@ -2,7 +2,7 @@
     box-shadow: 4px 4px 8px 0 rgb(34 60 80 / 20%);
     border-radius: 10px;
     display: flex;
-    min-height: 575px;
+    height: 575px;
 }
 
 .logo {
@@ -39,4 +39,5 @@
     max-width: 1366px;
     padding: 50px;
     margin: auto;
+
 }
