--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -3,4 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    font-size: .875rem;
+    font-family: Montserrat-Regular, sans-serif;
+    color: var(--grey);
 }
